# emurgo-finalproject

./: CHANGELOG.md  LICENSE  log.txt  presentation-v03.cabal  proj-finale.cabal  read.me
app/: Main.hs
src/Animation/: Animate.hs  Auxiliary.hs  CLI.hs  Draw.hs  State.hs
