cabal-version:       2.4
name:                proj-finale-v03
version:             0.2.0.0
synopsis:            Animation program as CArdano Developer Associate module finale project
description:         This version attempts to translate the old animation program by translating
                     the next and drawState function into monadic transformers functions 
homepage:            NA
-- license:             BSD3
-- license-file:        LICENSE
author:              ctlimctlim
maintainer:          ctlimctlim@gmail.com
-- copyright:
-- category:
-- build-type:          Simple
extra-source-files:  CHANGELOG.md
-- cabal-version:       >=1.10

library animation
  exposed-modules:     Animation.Animate, Animation.State, Animation.CLI
  other-modules:       Animation.Draw, Animation.Auxiliary
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable proj-finale
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13, animation, transformers
  hs-source-dirs:      app
  default-language:    Haskell2010